[package]
name = "tes-parse"
version = "0.1.0"
authors = ["Adam Gleave"]
edition = "2018"

[dependencies]
bitflags = { git = "https://github.com/arturoc/bitflags", branch = "bitflags_trait" }
byteorder = "1.4.2"
flate2 = "1.0.20"
lazy_static = "1.4.0"
log = "0.4.14"
nom = "6.1.2"
thiserror = "1.0.24"

[dev-dependencies]
ctor = "0.1.19"
env_logger = "0.8.3"
